# petrel-py

./: README.md  RELEASE_NOTES.md  pre-commit  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
src/petrel-py/: RELEASE_NOTES.md  petrel.py
src/petrel_py/: petrel.py
src/petrel_pyclient/: petrel.py
