[project]
name = "petrel-py"
version = "0.0.1"
authors = [
  { name="Shawn Boyette", email="shawn@firepear.net" },
]
description = "Petrel networking library client (for Python)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/firepear/petrel-py"
Issues = "https://github.com/firepear/petrel-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
