[project]
name = "petrel-py"
dynamic = ["version"]
authors = [
  { name="Shawn Boyette", email="shawn@firepear.net" },
]
description = "Petrel networking client (Python)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/firepear/petrel-py"
Issues = "https://github.com/firepear/petrel-py/issues"
Changelog = "https://github.com/firepear/petrel-py/blob/master/RELEASE_NOTES.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
